refactor(boletin.Exercise_3): refactor functions using streams and optionals to manage nullpointexceptions